# myBLAS

./: CMakeLists.txt  main.cpp  run_all.sh  run_benchmark.sh  run_main.sh
benchmark/: CMakeLists.txt  bench_mklBLAS_dgemm.cpp  bench_myBLAS_dgemm.cpp  bench_myBLAS_dgemm1.cpp
include/: blas_level3.h  memAlloc.h  myBLAS_level3.h  utils.h
scripts/: plot_gflops.py
src/level3/: sgemm.cpp
src/utils/: dataGen.cpp  memAlloc.cpp  utils.cpp
tests/: CMakeLists.txt
